fix spacing on landing search box

--- a/web/themes/custom/asulib_barrio/scss/components/search-form.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/search-form.scss
@@ -25,7 +25,7 @@ nav #search-form {
 
 }
 
-.search-home-form fieldset.form-group {
+.search-home-form fieldset.form-group, .bento-home-search-form fieldset.form-group {
     margin-bottom: 0;
 }
 
